<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PresetWidget</class>
 <widget class="QWidget" name="PresetWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="1">
    <widget class="QPushButton" name="helpButton">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="maximumSize">
      <size>
       <width>25</width>
       <height>16777215</height>
      </size>
     </property>
     <property name="toolTip">
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;What is this?&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="text">
      <string>?</string>
     </property>
    </widget>
   </item>
   <item row="0" column="0">
    <widget class="QComboBox" name="presetSel"/>
   </item>
   <item row="1" column="0" colspan="2">
    <widget class="QStackedWidget" name="presetStack">
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="NoCWidget">
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
          <string>No IO preset loaded</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="XYZPreset" name="XYZWidget"/>
     <widget class="PWPreset" name="PWWidget"/>
     <widget class="LmpPreset" name="LmpWidget"/>
     <widget class="CPPreset" name="CPWidget"/>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>PWPreset</class>
   <extends>QWidget</extends>
   <header>iopresets/pwpreset.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>LmpPreset</class>
   <extends>QWidget</extends>
   <header>iopresets/lmppreset.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>XYZPreset</class>
   <extends>QWidget</extends>
   <header>iopresets/xyzpreset.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>CPPreset</class>
   <extends>QWidget</extends>
   <header>iopresets/cppreset.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
